# k8s-observability-platform

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: build-loadgen.yml  lint-chart.yml
apps/loadgen/: Dockerfile  pyproject.toml
apps/loadgen/src/loadgen/: __main__.py  config.py  mix.py  runner.py
apps/loadgen/tests/: test_mix.py  test_runner.py
charts/obs-sim/: Chart.yaml  values-eks.yaml  values.yaml
charts/obs-sim/templates/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  loadgen.yaml  service.yaml  servicemonitor.yaml
docs/: eks-runbook.md  eks-writeup.md  phase-1-chart-parity.diff
gitops/argocd/: README.md  application.yaml  argocd-values.yaml
manifests/: 10-configmap.yaml  30-service.yaml  40-ingress.yaml  60-loadgen.yaml  deployment.yaml  hpa.yaml  namespace.yaml
monitoring/: alloy-values.yaml  loki-datasource.yaml  loki-values.yaml
terraform/eks/: .gitignore  .terraform.lock.hcl  eks.tf  irsa.tf  outputs.tf  variables.tf  versions.tf  vpc.tf
