[project]
name = "loadgen"
version = "0.1.0"
description = "Load generator for observability-simulator: mixes success, error and slow requests so dashboards have variety"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic-settings>=2.4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loadgen"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
